--- a/age-calculator/src/assets/styles.scss
+++ b/age-calculator/src/assets/styles.scss
@@ -2,9 +2,17 @@
 
 :root {
   --color-primary: hsl(259, 100%, 65%);
+  --color-danger: hsl(0, 100%, 67%);
+  --color-off-white: hsl(0, 0%, 94%);
+  --color-light-grey: hsl(0, 0%, 86%);
+  --color-smoke-grey: hsl(0, 1%, 44%);
+  --color-black: hsl(0, 0%, 8%);
 }
 
 body {
   margin: 0;
-  font-family: "Poppins", sans-serif;
+
+  * {
+    font-family: "Poppins", sans-serif;
+  }
 }
