--- a/rest-countries-api/src/styles.scss
+++ b/rest-countries-api/src/styles.scss
@@ -3,12 +3,15 @@
   --color-text: hsl(200, 15%, 8%);
   --color-bg-navbar: hsl(0, 0%, 100%);
   --color-bg-content: hsl(0, 0%, 98%);
-  --color: hsl(0, 0%, 52%);
+  --box-shadow: 1px 2px 3px hsl(0, 0%, 90%);
+  --color-text-light: hsl(0, 0%, 52%);
 
   &.dark-theme {
     --color-text: hsl(0, 0%, 100%);
     --color-bg-navbar: hsl(209, 23%, 22%);
     --color-bg-content: hsl(207, 26%, 17%);
+    --color-text-light: hsl(0, 0%, 98%);
+    --box-shadow: none;
   }
 }
 
@@ -19,6 +22,19 @@ body {
 
 * {
   font-family: "Nunito Sans", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: var(--color-text);
+}
+
+span,
+p {
   font-size: 14px;
+  color: var(--color-text);
 }
