--- a/rest-countries-api/src/styles.scss
+++ b/rest-countries-api/src/styles.scss
@@ -3,7 +3,7 @@
   --color-text: hsl(200, 15%, 8%);
   --color-bg-navbar: hsl(0, 0%, 100%);
   --color-bg-content: hsl(0, 0%, 98%);
-  --box-shadow: 1px 2px 3px hsl(0, 0%, 90%);
+  --box-shadow: 0 0 8px hsl(0, 0%, 85%);
   --color-text-light: hsl(0, 0%, 52%);
 
   &.dark-theme {
@@ -34,6 +34,7 @@ h6 {
 }
 
 span,
+a,
 p {
   font-size: 14px;
   color: var(--color-text);
