--- a/rest-countries-api/src/styles.scss
+++ b/rest-countries-api/src/styles.scss
@@ -29,7 +29,11 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+li,
+p,
+span,
+a {
   color: var(--color-text);
 }
 
@@ -37,5 +41,4 @@ span,
 a,
 p {
   font-size: 14px;
-  color: var(--color-text);
 }
